fixed cards overlapping navbar

--- a/src/components/nav/Navbar.css
+++ b/src/components/nav/Navbar.css
@@ -10,6 +10,10 @@ nav {
     color: white;
     position: sticky;
     top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    z-index: 1000;
 }
 
 nav .title {
